--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -7,15 +7,15 @@
 .main-livro {
 	width: 250px;
 	height: 250px;
-	background-color: gray;
+	/* background-color: gray; */
 	margin: 0 auto;
 	padding-left: 20px;
 	float: left;
-	border-color: black;
+/* 	border-color: black;
 	border-radius: 10px 10px 10px 10px;
 	-moz-border-radius: 10px 10px 10px 10px;
 	-webkit-border-radius: 10px 10px 10px 10px;
-	border: 2px solid #000000;
+	border: 2px solid #000000; */
 }
 
 .bs-example {
